# nix-daemon-scripts

./: .gitignore  pyproject.toml
src/: config_nix_daemon_with_proxy.py
